// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> should render Heading with default properties 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.normal.lowContrast"
  fontFamily="text"
  fontSize={200}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="l"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with size "large" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.subdued.lowContrast"
  fontFamily="text"
  fontSize={400}
  fontStyle="normal"
  fontWeight="regular"
  lineHeight="xl"
  style={
    Array [
      Object {
        "color": "hsla(217, 18%, 45%, 1)",
        "fontFamily": "Lato",
        "fontSize": 18,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with size "medium" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.muted.lowContrast"
  fontFamily="text"
  fontSize={300}
  fontStyle="normal"
  fontWeight="regular"
  lineHeight="m"
  style={
    Array [
      Object {
        "color": "hsla(216, 16%, 60%, 1)",
        "fontFamily": "Lato",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 20,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with size "small" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.normal.lowContrast"
  fontFamily="text"
  fontSize={200}
  fontStyle="normal"
  fontWeight="regular"
  lineHeight="l"
  style={
    Array [
      Object {
        "color": "hsla(217, 56%, 17%, 1)",
        "fontFamily": "Lato",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with size "small" and contrast "high" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.normal.highContrast"
  fontFamily="text"
  fontSize={200}
  fontStyle="normal"
  fontWeight="regular"
  lineHeight="l"
  style={
    Array [
      Object {
        "color": "hsla(0, 0%, 100%, 1)",
        "fontFamily": "Lato",
        "fontSize": 16,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 24,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Get Started With Payment Gateway
</Text>
`;

exports[`<Heading /> should render Heading with variant "subheading" and weight "bold" 1`] = `
<Text
  accessibilityRole="header"
  color="surface.text.subdued.lowContrast"
  fontFamily="text"
  fontSize={75}
  fontStyle="normal"
  fontWeight="bold"
  lineHeight="xs"
  style={
    Array [
      Object {
        "color": "hsla(217, 18%, 45%, 1)",
        "fontFamily": "Lato",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 16,
        "marginBottom": 0,
        "marginLeft": 0,
        "marginRight": 0,
        "marginTop": 0,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
        "textDecorationLine": "none",
      },
    ]
  }
>
  Get Started With Payment Gateway
</Text>
`;
